--- a/public/css/button.css
+++ b/public/css/button.css
@@ -30,6 +30,18 @@
 	border-radius: 0.5rem;
 	margin-top: 1.5rem;
 }
+.btn-relative-fit {
+	background-color: var(--blue);
+	padding: 0.5rem 0;
+	width: 6.25rem;
+	color: white;
+	text-align: center;
+	display: block;
+	margin: auto;
+	cursor: pointer;
+	border-radius: 0.375rem;
+	margin-top: 1.5rem;
+}
 .btn-border-long {
 	background-color: var(--blue);
 	padding: 0.5rem 1.75rem;
@@ -91,5 +103,8 @@
 		bottom: 2rem;
 		left: 50%;
 	    transform: translate(-50%);
+	}
+	.btn-relative-fit {
+		width: 7.5rem;
 	}
 }
