--- a/public/css/user.css
+++ b/public/css/user.css
@@ -189,17 +189,18 @@ ul.menu-list-items li {
 }
 ul.menu-list-items li p{
 	text-align: center;
+	padding-top: 0.75rem;
 }
 ul.menu-list-items li .menu-item__thumb {
-	width: 5rem;
-	height: 5rem;
+	width: 3rem;
+	height: 3rem;
 	border: 0.5px solid #E5E5E5;
 	background-color: white;
 	box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.111045);
-	border-radius: 1.5rem;
+	border-radius: 1rem;
 }
 ul.menu-list-items li .menu-item__thumb img {
-	width: 2rem;
+	width: 1.25rem;
     height: inherit;
     margin: auto;
 }
@@ -599,6 +600,15 @@ ul.history-list-items li.item.active {
 	}
 	.grid-two-column > div .m-card {
 		height: 100%;
+	}
+	ul.menu-list-items li .menu-item__thumb {
+		width: 5rem;
+		height: 5rem;
+	}
+	ul.menu-list-items li .menu-item__thumb img {
+		width: 2rem;
+	    height: inherit;
+	    margin: auto;
 	}
 }
 @media screen and (min-width: 992px){  
