--- a/public/css/input.css
+++ b/public/css/input.css
@@ -7,7 +7,7 @@
 	height: 2.875rem;
 	font-size: 0.875rem;
 	width: 100%;
-	padding-left: 3.375rem;
+	padding-left: 2.375rem;
 	padding-right: 2rem;
 	padding-top: 0.375rem;
 	padding-bottom: 0.375rem;
@@ -60,7 +60,7 @@ select.input-box-default {
 	position: absolute;
 	height: 1rem;
 	width: 1rem;
-	left: 1.1875rem;
+	left: 0.75rem;
 	right: 1.25rem;
 	top: 1rem;
 }
@@ -74,6 +74,17 @@ input[type="radio"] {
 .input-box.checkbox {
 	display: flex;
 	justify-content: space-between;
+}
+@media screen and (min-width: 768px){ 
+	.input-box-data {
+		padding-left: 3.375rem;
+	}
+	.input-box-icon {
+		left: 1.1875rem;
+	}
+	.input-box-data {
+		margin-bottom: 0.875rem;
+	}
 }
 @media screen and (min-width: 992px){ 
 	.input-box-icon {
