--- a/public/css/utilities.css
+++ b/public/css/utilities.css
@@ -30,6 +30,120 @@
 	width: 70%;
 	margin: auto;
 }
+li.face-value {
+    background: #D2D2D2;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+    text-align: center;
+    margin-right: 0 !important;
+    border: 0.5px solid #D2D2D2;
+	box-sizing: border-box;
+	border-radius: 3px;
+}
+li.face-value.active {
+	background: #FFFFFF;
+	border: 1.5px solid #237BD3;
+	border-radius: 3px;
+	line-height: 1rem;
+}
+.utitlities .pay-method {
+	display: flex;
+	flex-direction: column;
+}
+.utitlities .pay-method .inputbox {
+	width: 100%;
+}
+.utilities input.form-check-input {
+	width: 1rem;
+	height: 1rem;
+}
+.utilities .m-card__top-thumb {
+	width: 3rem;
+	height: 3rem;
+}
+.utilities .m-card__top {
+	display: flex;
+    padding-bottom: 1rem;
+    border-bottom: 1px solid #D8D8D8;
+}
+.utilities .m-card__top .m-card__top-content {
+    margin-left: 1rem;
+}
+.utilities .m-card__content {
+	padding-top: 1rem;
+    margin-bottom: 0;
+}
+.utilities .m-card__content a.{ 
+}
+.utilities .m-card__content li {
+	display: flex;
+	line-height: 1.5rem;
+	margin-bottom: 0.5rem;
+}
+.utilities .m-card__content li img {
+	margin-right: 0.75rem;
+}
+.utilities .m-card__content li img.no-phone {
+	margin: auto;
+	width: 4.5rem;
+}
+.utilities .m-card__content li .des {
+	margin: auto;
+	margin-top: 0.5rem;
+}
+.utilities .submit-box a {
+	text-transform: uppercase;
+	padding: 0.5rem 0.5rem;
+}
+.utilities.hidden {
+	display: none;
+}
+.utilities .grid-two-column {
+	margin-top: 0;
+}
+.menu-item__thumb.active {
+	background-color: var(--blue) !important;
+}
+.menu-item__thumb.active {
+	background-color: 
+}
+.utilities .list-bank-acc-box {
+	background-color: var(--white);
+	border: 1px solid #E0E0E0;
+	box-shadow: 0px 20px 40px rgba(0, 0, 0, 0.06);
+	border-radius: 0.5rem;
+	padding-top: var(--card-padding-top);
+	padding-bottom: var(--card-padding-bottom);
+	padding-left: var(--card-padding-left);
+	padding-right: var(--card-padding-right);
+	margin-top: 1rem;
+}
+ul.list-bank-acc {
+	margin: 0;
+}
+ul.list-bank-acc li.bank-acc-item {
+	margin-right: 0;
+}
+ul.list-bank-acc li.bank-acc-item .m-card__top {
+	align-items: center;
+    padding-top: 1rem;
+}
+ul.list-bank-acc li.bank-acc-item:last-child .m-card__top {
+	padding-bottom: 0;
+	border-bottom: 0;
+}
+ul.list-bank-acc li.bank-acc-item input[type="radio"] {
+	margin: 0 !important;
+    margin-left: auto !important;
+}
+.card-no-bg-mobile.utilities .note-left {
+	max-width: 33.625rem;
+	margin: auto;
+    font-style: italic;
+    font-size: var(--smallest-font-size);
+    margin-top: 1rem;
+    line-height: 1.5rem;
+}
 @media screen and (min-width: 768px){ 
 	.body-content.utilities .menu-list-items {
 		margin-bottom: 2.1875rem;
@@ -46,14 +160,87 @@
 	.card-no-bg-mobile.utilities .submit-box a{
 		text-transform: none;
 	}
+	.utitlities .pay-method {
+		display: flex;
+		flex-direction: row;
+	}
+	li.face-value.active {
+		font-size: 1.25rem;	
+		line-height: 1.5rem;	
+	}
+	.input-box.pay-method {
+		flex-direction: row;
+	    display: flex;
+	    justify-content: space-between;
+	    align-items: center;
+	}
+	.input-box.pay-method .input-box {
+		margin: 0;
+		width: 65%;
+	}
+	.input-box.pay-method .input-box input{
+		margin-bottom: 0;
+	}
+	.utilities .grid-five-column {
+		grid-column-gap: 1rem;
+	}
+	.utilities label.form-check-label {
+		margin-left: 1rem;
+	}
+	.utilities div.m-card__content {
+		display: flex;
+		margin-top: 2rem;
+	}
+	.utilities .m-card__content a {
+		margin-right: 0
+	}
+	.utilities .m-card.no-phone-number ul {
+		display: flex;
+		flex-direction: column;
+	}
+	.utilities .submit-box {
+		width: 60%;
+		margin: auto;
+	}
+	.utilities .submit-box a {
+		position: relative;
+		left: initial;
+	    bottom: 0;
+	    transform: initial;
+	    width: 46%;
+	}
+	.utilities .list-bank-acc-box { 
+		padding: 0;
+	    border: 0;
+	    box-shadow: none;
+	    flex-direction: row;
+	    display: flex;
+	    justify-content: space-between;
+	}
+	.utilities .list-bank-acc-box > h3.title {
+		padding-top: 1rem;
+	}
+	.utilities .list-bank-acc-box ul.list-bank-acc {
+		width: 60%;
+	}
+	.card-no-bg-mobile.utilities .note-left {
+		margin-top: 2.875rem;
+	}
 }
 @media screen and (min-width: 992px){ 
-	.card-no-bg-mobile.utilities .input-box, .card-no-bg-mobile.utilities .note {
+	.card-no-bg-mobile.utilities .input-box, 
+	.card-no-bg-mobile.utilities .note {
+		max-width: 45.625rem;
+	}
+	.card-no-bg-mobile.utilities .note-left {
 		max-width: 45.625rem;
 	}
 	.body-content.utilities .menu-list-items {
 		width: 90%;
 		margin: auto;
 		margin-bottom: 2.9rem;
+	}
+	.utilities .grid-five-column {
+		grid-column-gap: 2rem;
 	}
 }
