--- a/public/css/service.css
+++ b/public/css/service.css
@@ -82,6 +82,80 @@
 	padding-bottom: 0;
 	position: relative
 }
+ul.list-face-value {
+	display: flex;
+	justify-content: center;
+	border-bottom: 1px solid #D8D8D8;
+    margin: 0 6rem;
+    padding-bottom: 1.5rem;
+}
+ul.list-face-value li.face-value {
+	margin-right: 2rem !important;
+	margin-top: 1rem;
+    width: 7.5rem;
+    height: 3.125rem;
+    line-height: 2rem;
+}
+ul.list-face-value li.face-value:last-child {
+	margin-right: 0 !important;
+}
+ul.list-face-value li.face-value.active {
+	line-height: 2rem;
+}
+ul.list-pack-detail {
+	max-width: 33.375rem;
+    display: flex;
+    justify-content: space-between;
+    margin: auto;
+    text-align: center;
+    margin-top: 1.5rem;
+}
+ul.list-pack-detail li.pack-detail-item {
+	border-right: 1px solid #D8D8D8;
+	padding: 1rem 1.25rem;
+	width: 33.33333%;
+}
+ul.list-pack-detail li.pack-detail-item .value {
+	color: var(--blue);
+	font-weight: 500;
+	padding-top: 0.875rem;
+}
+ul.list-pack-detail li.pack-detail-item:last-child {
+	border-right: 0;
+}
+.pack-range-value {
+	max-width: 33.375rem;
+	margin: auto;
+	margin-top: 2.5rem;
+	margin-bottom: 2.5rem;
+}
+ul.list-dots {
+	display: flex;
+	justify-content: space-between;
+}
+ul.list-dots li.dot {
+	width: 0.375rem;
+	height: 0.375rem;
+	border-radius: 50%;
+	background-color: #B2BCC8;
+}
+#slider-range span {
+	background: url(../source/image/i_slide_move.svg);
+    background-position: center;
+    background-size: cover;
+    width: 2rem;
+    height: 2rem;
+    border: 0;
+    top: -0.6rem;
+    outline: none;
+}
+#slider-range .ui-widget-header {
+	background: #0EA3F9;
+}
+.package-content a.create-pack {
+	text-transform: uppercase;
+	margin-bottom: 2.875rem;
+}
 @media screen and (min-width: 768px){
 	.using-pack-content .content-header {
 		margin-top: 0;
@@ -160,6 +234,47 @@
 		grid-template-columns: 1fr 1fr 1fr;
 		grid-column-gap: 1rem;
 		grid-row-gap: 1rem;
+	}
+	/*ul.list-face-value {
+		display: flex;
+		justify-content: center;
+		border-bottom: 1px solid #D8D8D8;
+	    margin: 0 6rem;
+	    padding-bottom: 1.5rem;
+	}
+	ul.list-face-value li.face-value {
+		margin-right: 2rem !important;
+		margin-top: 1rem;
+	    width: 7.5rem;
+	    height: 3.125rem;
+	    line-height: 2rem;
+	}
+	ul.list-face-value li.face-value:last-child {
+		margin-right: 0 !important;
+	}
+	ul.list-face-value li.face-value.active {
+		line-height: 2rem;
+	}*/
+	ul.list-pack-detail {
+		max-width: 33.375rem;
+	    display: flex;
+	    justify-content: space-between;
+	    margin: auto;
+	    text-align: center;
+	    margin-top: 1.5rem;
+	}
+	ul.list-pack-detail li.pack-detail-item {
+		border-right: 1px solid #D8D8D8;
+		padding: 1rem 1.25rem;
+		width: 33.33333%;
+	}
+	ul.list-pack-detail li.pack-detail-item .value {
+		color: var(--blue);
+		font-weight: 500;
+		padding-top: 0.875rem;
+	}
+	ul.list-pack-detail li.pack-detail-item:last-child {
+		border-right: 0;
 	}
 }
 @media screen and (min-width: 992px){
