--- a/public/css/user.css
+++ b/public/css/user.css
@@ -401,6 +401,60 @@ ul.history-list-items li.item.active {
 	margin-left: var(--card-padding-left);
     margin-right: var(--card-padding-right);
 }
+.digit-group {
+	display: flex;
+	justify-content: center;
+}
+.digit-group input {
+	width: 2rem;
+	height: 2rem;
+	background: url('../source/image/i_digit_number.svg');
+	border: none;
+	text-align: center;
+	font-size: 1.5rem;
+	margin: 0 2px;
+	margin-right: 1rem;
+}
+.digit-group input:active, .digit-group input:focus {
+	border: 1px solid var(--blue);
+	outline: none;
+	border-radius: 0.3rem;
+}
+.digit-group input:last-child {
+	margin-right: 0;
+}
+.prompt {
+	margin-bottom: 20px;
+	font-size: 20px;
+	color: white;
+}
+#dialog-message {
+	background-color: var(--white);
+	border: 1px solid #E0E0E0;
+	box-shadow: 0px 20px 40px rgba(0, 0, 0, 0.06);
+	border-radius: 0.5rem;
+}
+#modalOTP .modal-body{
+	margin: 0 1rem;
+	text-align: center;
+}
+#modalOTP .modal-body h3.title {
+	font-size: 1.25rem !important;
+    line-height: 2.375rem;
+}
+#modalOTP .modal-body p {
+	margin-top: 1.5rem !important;
+    line-height: 1.5rem;
+}
+#modalOTP .modal-body form.digit-group {
+    margin-top: 1.5rem;
+}
+#modalOTP .modal-body .text-note-right {
+	margin-top: 1.5rem;
+	text-decoration: underline;
+	color: var(--blue);
+}
+
 @media screen and (min-width: 768px){ 
 	ul.list-items {
 		padding-left: 3rem;
