--- a/public/css/utilities.css
+++ b/public/css/utilities.css
@@ -39,6 +39,7 @@ li.face-value {
     border: 0.5px solid #D2D2D2;
 	box-sizing: border-box;
 	border-radius: 3px;
+	cursor: pointer;
 }
 li.face-value.active {
 	background: #FFFFFF;
@@ -144,6 +145,15 @@ ul.list-bank-acc li.bank-acc-item input[type="radio"] {
     margin-top: 1rem;
     line-height: 1.5rem;
 }
+ul.list-date-pay {
+	display: flex;
+    justify-content: space-between;
+    margin-top: 1rem;
+}
+ul.list-date-pay li.face-value {
+	width: 2.5rem;
+	height: 2.5rem;
+}
 @media screen and (min-width: 768px){ 
 	.body-content.utilities .menu-list-items {
 		margin-bottom: 2.1875rem;
@@ -225,6 +235,23 @@ ul.list-bank-acc li.bank-acc-item input[type="radio"] {
 	}
 	.card-no-bg-mobile.utilities .note-left {
 		margin-top: 2.875rem;
+	}
+	.utilities .list-date-pay-box {
+		display: flex;
+		flex-direction: row;
+		justify-content: space-between;
+	}
+	.utilities .list-date-pay-box ul.list-date-pay {
+		display: flex;
+	    justify-content: space-between;
+	    width: 60%;
+	}
+	.utilities .list-date-pay-box > h3.title {
+		padding-top: 1rem;
+	}
+	.utilities .list-bank-acc-box ul.list-date-pay li.face-value {
+		width: 3rem;
+    	height: 3rem;
 	}
 }
 @media screen and (min-width: 992px){ 
