--- a/public/css/base.css
+++ b/public/css/base.css
@@ -625,8 +625,7 @@ ul.nav-list-mobile li {
 	padding: 1rem 1.5rem;
 	position: absolute;
 	background-color: white;
-	top: 4.7rem;
-    /*left: 1.75rem;*/
+	top: 4.8rem;
     z-index: 999;
     width: 15rem;
     border: 1px solid #E0E0E0;
@@ -1375,6 +1374,9 @@ ul.introduction {
 	}
 	.m-card.lslide.currentSlide {
 		opacity: 1 !important;
+	}
+	#slider2 .m-card.lslide.currentSlide:nth-child(1) {
+		opacity: 0 !important;
 	}
 	.content-footer {
 		display: none;
