--- a/public/css/button.css
+++ b/public/css/button.css
@@ -88,8 +88,8 @@
 	display: block;
 	margin: auto;
 }
-.button:hover {
-	color: white;
+.button:hover, .btn-border-fit:hover, .btn-relative-fit:hover, .btn-border-long:hover, .btn-relative-long:hover {
+	color: white !important;
 }
 @media screen and (min-width: 768px){  
 	.btn-border-fit {	
