--- a/public/css/base.css
+++ b/public/css/base.css
@@ -778,6 +778,9 @@ ul.nav-list-mobile li {
 /*.card-no-bg-mobile ul li:first-child {
 	margin-right: 1.4375rem;
 }*/
+.card-no-bg-mobile.login-body__method ul li:first-child {
+    margin-right: 1rem;
+}
 .card-no-bg-mobile ul li {
 	font-size: var(--smaller-font-size);
 	font-weight: 500;
@@ -797,6 +800,7 @@ ul.nav-list-mobile li {
 }
 #quick-login div img.qrcode {
 	width: 6.25rem;
+    margin-top: 1.875rem;
 }
 #quick-login div div .line-bg-white {
 	margin-left: -2rem;
