--- a/public/css/employ.css
+++ b/public/css/employ.css
@@ -109,6 +109,57 @@ input[type='file']{
 .sendcv-content textarea {
 	margin-bottom: 0;
 }
+.body-content.employ .m-card.introduction {
+	padding: 0 !important;
+}
+.body-content.employ .m-card.introduction .card-bottom {
+	display: flex;
+}
+.body-content.employ .m-card.introduction .card-bottom .card-right{
+	display: flex;
+	flex-direction: column;
+	padding-top: 0.75rem;
+}
+.body-content.employ .m-card.introduction .card-title {
+	margin-bottom: 0;
+}
+.body-content.employ .m-card.introduction .card-bottom .card-right ul.card-body{
+	padding: 0;
+}
+.body-content.employ .m-card.introduction ul.card-body li{
+	display: flex;
+	align-items: center;
+}
+.body-content.employ .m-card.introduction ul.card-body li img{
+	margin-right: 0.5rem;
+	margin-bottom: auto;
+}
+.body-content.employ .m-card.introduction .card-thumb img {
+	width: 3.25rem;
+	border-radius: 0.5rem;
+	margin: 0.75rem;
+}
+.gallery .lslide.active {
+	opacity: 1;
+}
+ul.gallery li {
+	opacity: 0;
+}
+.lightSlider3 .lslide.currentSlide {
+	opacity: 1;
+}
+.body-content.employ .card-slider-header {
+	margin-bottom: 2.25rem;
+}
+.body-content.employ .card-location-left{
+	margin-top: 1rem;
+}
+.body-content.employ .m-card.slider {
+	overflow: hidden;
+}
+.body-content.employ .m-card.card-gallery {
+	overflow: hidden;
+}
 @media screen and (min-width: 768px) {
 	.sendcv-content {
 		background-color: var(--white);
@@ -205,6 +256,54 @@ input[type='file']{
 	}
 	.file-upload-label, .text-input-label {
 	    padding-left: 3.5rem;
+	}
+	.card-gallery-header {
+		width: 80%;
+		margin: auto;
+		margin-bottom: 3.375rem;
+	}
+	.body-content.employ .m-card.slider {
+		padding-right: 0.5rem;
+		padding-left: 0.5rem;
+	}
+	.card-slider-header {
+		width: 100%;
+	}
+	.body-content.employ .card-location-left{
+		margin-top: 1rem;
+	}
+	.body-content.employ .m-card.location {
+		display: flex;
+		flex-direction: row-reverse;
+	}
+	.body-content.employ .m-card.location .card-location-left {
+		display: flex;
+		flex-direction: column;
+		margin-right: var(--card-padding-right);
+	}
+	.body-content.employ .m-card.location .card-location-left img {
+		margin-top: auto;
+		max-width: 16rem;
+	}
+	.body-content.employ .m-card.introduction .card-thumb img{
+		width: 6rem;
+		margin: var(--card-padding-right);
+	}
+	.body-content.employ .m-card.introduction .card-right{
+		margin-top: var(--card-padding-right);
+	}
+	.body-content.employ .m-card.slider {
+		overflow: visible;
+	}
+	.body-content.employ .m-card.card-gallery {
+		overflow: visible;
+	}
+	.body-content.employ .card-slider-content {
+		padding-left: var(--card-padding-left);
+		padding-right: var(--card-padding-right);
+	}
+	.lightSlider3 .lslide {
+		opacity: 0;
 	}
 }
 @media screen and (min-width: 992px) {
