--- a/public/css/button.css
+++ b/public/css/button.css
@@ -1,7 +1,7 @@
 .button {
 	background-color: var(--blue);
 	padding: 0.5rem 3.625rem;
-	color: white;
+	color: white !important;
 	width: fit-content;
 	display: block;
 	margin: auto;
@@ -10,7 +10,7 @@
 .btn-border {
 	background-color: var(--blue);
 	padding: 0.5rem 3.625rem;
-	color: white;
+	color: white !important;
 	width: fit-content;
 	display: block;
 	margin: auto;
@@ -22,7 +22,7 @@
 	background-color: var(--blue);
 	padding: 0.5rem 0;
 	width: 7.5rem;
-	color: white;
+	color: white !important;
 	text-align: center;
 	display: block;
 	margin: auto;
@@ -34,7 +34,7 @@
 	background-color: var(--blue);
 	padding: 0.5rem 0;
 	width: 6.25rem;
-	color: white;
+	color: white !important;
 	text-align: center;
 	display: block;
 	margin: auto;
@@ -45,7 +45,7 @@
 .btn-border-long {
 	background-color: var(--blue);
 	padding: 0.5rem 1.75rem;
-	color: white;
+	color: white !important;
 	text-align: center;
 	display: block;
 	margin: auto;
@@ -56,7 +56,7 @@
 .btn-relative-long {
 	background-color: var(--blue);
 	padding: 0.5rem 1.75rem;
-	color: white;
+	color: white !important;
 	text-align: center;
 	display: block;
 	margin: auto;
@@ -68,7 +68,7 @@
 	background-color: white;
 	border: 1px solid var(--blue);
 	border-radius: 1.5rem;
-	color: var(--blue);
+	color: var(--blue) !important;
 	padding: 0.5rem 0;
 	text-align: center;
 	width: 8.125rem;
@@ -80,7 +80,7 @@
 	background-color: white;
 	border: 1px solid var(--blue);
 	border-radius: 1.5rem;
-	color: var(--blue);
+	color: var(--blue) !important;
 	padding: 0.5rem 0;
 	width: 5.5rem;
 	text-align: center;
