--- a/public/css/utilities.css
+++ b/public/css/utilities.css
@@ -35,7 +35,7 @@ li.face-value {
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
     text-align: center;
-    margin-right: 0 !important;
+    margin-right: 0;
     border: 0.5px solid #D2D2D2;
 	box-sizing: border-box;
 	border-radius: 3px;
