--- a/public/css/customer.css
+++ b/public/css/customer.css
@@ -9,6 +9,7 @@
 .reflect-content .reflect-body .note {
 	text-align: right;
 	font-size: 0.875rem;
+	font-style: italic;
 }
 .question-content .nav {
 	max-width: 51.875rem;
@@ -33,6 +34,7 @@
 	border: 1px solid #E0E0E0;
 	box-shadow: 0px 20px 40px rgba(0, 0, 0, 0.06);
 	border-radius: 24px;
+	cursor: pointer;
 }
 .question-content .nav li .nav-item__thumb img {
 	object-fit: contain;
@@ -56,6 +58,7 @@
 .question-body .question-item .question{
 	font-weight: 500;
 	padding-right: 1.6rem;
+	cursor: pointer;
 }
 .question-body .question-item .question, .question-body .question-item .answer {
 	position: relative;
