--- a/public/css/input.css
+++ b/public/css/input.css
@@ -3,9 +3,9 @@
 }
 .input-box-data {
 	position: relative;
-	line-height: 2rem;
+	line-height: 1.25rem;
 	height: 2.875rem;
-	font-size: 0.875rem;
+	font-size: 1rem;
 	width: 100%;
 	padding-left: 2.375rem;
 	padding-right: 2rem;
@@ -18,6 +18,9 @@
 	outline:none;
 	margin-bottom: 0.625rem;
 }
+textarea.input-box-data {
+	margin-bottom: 0;
+}
 .input-box-default:focus {
 	border: 1px solid #CCCCCC !important;
 }
@@ -25,7 +28,7 @@
 	position: relative;
 	line-height: 2rem;
 	height: 2.875rem;
-	font-size: 0.875rem;
+	font-size: 1rem;
 	width: 100%;
 	padding-left: 1rem;
 	padding-right: 3.375rem;
