--- a/public/css/service.css
+++ b/public/css/service.css
@@ -157,6 +157,7 @@ ul.list-dots li.dot {
 .list-face-value-wrap {
 	display: flex;
 	align-items: center;
+	justify-content: center;
 }
 .list-face-value-wrap li.face-value {
 }
@@ -164,7 +165,7 @@ ul.list-dots li.dot {
 	z-index: 2;
 } 
 .list-face-value-wrap > div {
-	width: 87%;
+	width: 80%;
 	margin-left: 0.5rem;
     margin-right: 0.5rem;
 }
@@ -415,6 +416,7 @@ li.face-value.lslide.currentSlide {
 	#slider-range span {
 	    background-position: -6px;
 	    width: 2rem;
+	    cursor: pointer;
 	}
 	.list-face-value-wrap > div {
 		width: 100%;
