--- a/public/css/base.css
+++ b/public/css/base.css
@@ -527,6 +527,11 @@ h1.title {
 	height: 100%;
 	position: relative;
 }
+.m-card.customer:hover {
+	box-shadow: 0px 20px 40px rgba(0, 0, 0.1, 0.2);
+	transform: scale(1.02);
+	transition: 0.3s ease-in;
+}
 .m-card.customer .customer-content {
 	text-align: center;
 	color: #3E3E58;
@@ -776,12 +781,16 @@ ul.nav-list-mobile li {
 	max-width: 33.625rem;
 	margin: 0 auto;
 }
+.card-no-bg-mobile .input-box {
+	margin-bottom: 0.75rem;
+}
 .card-no-bg-mobile .button {
 	margin: auto;
 	margin-top: 3rem;
 	margin-bottom: 2.375rem;
 	text-transform: uppercase;
 	font-size: var(--smallest-font-size);
+	border-radius: 0.375rem;
 }
 .card-no-bg-mobile ul {
 	justify-content: center;
@@ -819,7 +828,7 @@ ul.nav-list-mobile li {
 	margin-right: -2rem;
 }
 #quick-login div div p {
-	margin-top: -1.2rem;
+	margin-top: -1.2rem !important;
 	line-height: 1rem;
 	padding: 0.5rem;
 	background-color: white;
@@ -836,7 +845,10 @@ ul.nav-list-mobile li {
 .social-media__box img {
 	width: 3.375rem;
 	height: 3.375rem;
-	margin: 0 1rem;
+	margin: 0 0.5rem;
+}
+.social-media__box img:hover {
+	transform: scale(1.02);
 }
 #normal-login{
 	position: relative;
@@ -844,7 +856,7 @@ ul.nav-list-mobile li {
 	padding-bottom: 0.5rem;
 }
 #normal-login .forget-password {
-	color: var(--blue);
+	color: var(--blue) !important;
 	font-style: italic;
 	margin-right: 0;
 	position: absolute;
@@ -919,6 +931,13 @@ ul.introduction {
 }
 .other-news__content .news-item {
 	padding-bottom: 1rem;
+}
+iframe {
+	width: 100%;
+}
+.m-card.events, .m-card.event-nd {
+	border-radius: 0.5rem;
+	overflow: hidden;
 }
 /*===== MEDIA QUERY =====*/
 @media screen and (min-width: 375px){
@@ -1225,10 +1244,10 @@ ul.introduction {
 	    margin: 0 auto;
 	}
 	#normal-login .submit-box .forget-password {
-	    top: 2rem;
 	    height: fit-content;
 	    position: relative;
 	    float: right;
+	    margin-top: -1rem;
 	}
 	/*=== news page ===*/
 	.events-menu {
@@ -1298,6 +1317,30 @@ ul.introduction {
 	}
 	.header.is-mobile .m-dropdown-item li a {
 		font-size: var(--smaller-font-size);
+	}
+	.social-media__box img {
+		width: 5rem;
+		height: 5rem;
+		margin: 0 3.375rem;
+	}
+	.card-no-bg-mobile.login-body__method ul li:first-child {
+	    margin-right: 4.625rem;
+	}
+	.social-media {
+		margin-top: 2.25rem;
+	}
+	.card-no-bg-mobile.login-body__method .input-box {
+		margin-bottom: 2.25rem;
+	}
+	.m-card.service img{
+		border-radius: 1.5rem 1.5rem 0 0;
+	}
+	#quick-login div img.qrcode {
+		width: 11.25rem;
+	}
+	.m-card.events, .m-card.event-nd {
+		border-radius: 1.5rem;
+		overflow: hidden;
 	}
 }
 @media screen and (min-width: 992px){
