--- a/public/css/button.css
+++ b/public/css/button.css
@@ -1,3 +1,6 @@
+button {
+	border: none;
+}
 .button {
 	background-color: var(--blue);
 	padding: 0.5rem;
@@ -7,6 +10,34 @@
 	display: block;
 	margin: auto;
 	cursor: pointer;
+	border-radius: 0.375rem;
+}
+button.button:hover,
+.button:hover,
+a.button:hover, 
+a.card-no-bg-mobile .button:hover,
+a.btn-border:hover,
+a.btn-border-fit:hover,
+a.btn-relative-fit:hover,
+a.btn-border-long:hover,
+a.btn-relative-long:hover,
+a.btn-bg-white:hover,
+a.btn-bg-white-fit:hover {
+	border: 1px solid var(--blue);
+	color: var(--blue) !important;
+	box-shadow: inset 260px 0 0 0 #fff;
+}
+.button, 
+.btn-border,
+.btn-border-fit,
+.btn-relative-fit,
+.btn-border-long,
+.btn-relative-long,
+.btn-bg-white,
+.btn-bg-white-fit {
+	box-shadow: inset 0 0 0 0 #fff;
+	transition: ease-out 1s;
+	border: 1px solid transparent;
 }
 .btn-border {
 	background-color: var(--blue);
